upgrading to spring-boot 3 and do some refactor