@@ -1,17 +1,13 @@
 package com.iot.device_tracking_system.exception;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
-
-import javax.servlet.http.HttpServletRequest;
-
+import com.iot.device_tracking_system.model.Response;
+import jakarta.servlet.http.HttpServletRequest;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
@@ -19,24 +15,25 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
-import com.iot.device_tracking_system.controller.DeviceControllerImpl;
-import com.iot.device_tracking_system.model.Response;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 @ControllerAdvice
 public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
 
-    private static final Logger LOGGER = LogManager.getLogger(DeviceControllerImpl.class);
+    private static final Logger log = LogManager.getLogger(GlobalExceptionHandler.class);
     
   @Override
   protected ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException ex, HttpHeaders headers,
-      HttpStatus status, WebRequest request) {
+                                                                HttpStatusCode status, WebRequest request) {
     Map<String, Object> body = new HashMap<>();
     
     List<String> errors = ex.getBindingResult()
         .getFieldErrors()
         .stream()
         .map(DefaultMessageSourceResolvable::getDefaultMessage)
-        .collect(Collectors.toList());
+        .toList();
     
     body.put("success", false);
     body.put("errors", errors);
@@ -51,8 +48,8 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
 
 		Response response = new Response(false, ex.getMessage(), "");
 		HttpStatus status = HttpStatus.BAD_REQUEST;
-		LOGGER.catching(ex);
-		return new ResponseEntity<Response>(response, status);
+		log.catching(ex);
+		return new ResponseEntity<>(response, status);
 		
   }
   
